[package]
name = "rr-fluff-protocol-parser"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.6.0", features = ["full"] }
hyper = "0.14.10"
openssl = "0.10.30"
serde = { version = "1.0.130", features = ["derive"] }
nom = "5.1.0"
smallvec = "1.5.0"
crossbeam-channel = "0.5.0"
chrono = "0.4.19"